// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`listUsersRoute > renders blank last login when updatedAt missing 1`] = `
"
  <nav class="govuk-breadcrumbs" aria-label="Breadcrumb">
  <ol class="govuk-breadcrumbs__list">
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="/admin">User management</a>
    </li>
    <li class="govuk-breadcrumbs__list-item" aria-current="page">Users</li>
  </ol>
</nav>


    



  <h1 class="govuk-heading-l">Users</h1>

  <div class="govuk-!-text-align-right">
    <a href="/admin/user-management/users/new" role="button" draggable="false" class="govuk-button govuk-button--secondary" data-module="govuk-button">
  Create user
</a>
  </div>



    <table class="govuk-table">
  <thead class="govuk-table__head">
    <tr class="govuk-table__row">
      <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
      <th scope="col" class="govuk-table__header govuk-!-width-one-third">Email</th>
      <th scope="col" class="govuk-table__header">Last login</th>
    </tr>
  </thead>
  <tbody class="govuk-table__body">
    <tr class="govuk-table__row">
      <th scope="row" class="govuk-table__header">        <a class="govuk-link" href="/admin/user-management/user-1">Alice Able</a>
</th>
      <td class="govuk-table__cell">alice@example.com</td>
      <td class="govuk-table__cell"></td>
    </tr>
  </tbody>
</table>

        "
`;

exports[`listUsersRoute > renders empty state when there are no users 1`] = `
"
  <nav class="govuk-breadcrumbs" aria-label="Breadcrumb">
  <ol class="govuk-breadcrumbs__list">
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="/admin">User management</a>
    </li>
    <li class="govuk-breadcrumbs__list-item" aria-current="page">Users</li>
  </ol>
</nav>


    



  <h1 class="govuk-heading-l">Users</h1>

  <div class="govuk-!-text-align-right">
    <a href="/admin/user-management/users/new" role="button" draggable="false" class="govuk-button govuk-button--secondary" data-module="govuk-button">
  Create user
</a>
  </div>

    <p class="govuk-body">There are no users.</p>
        "
`;

exports[`listUsersRoute > renders users page 1`] = `
"
  <nav class="govuk-breadcrumbs" aria-label="Breadcrumb">
  <ol class="govuk-breadcrumbs__list">
    <li class="govuk-breadcrumbs__list-item">
      <a class="govuk-breadcrumbs__link" href="/admin">User management</a>
    </li>
    <li class="govuk-breadcrumbs__list-item" aria-current="page">Users</li>
  </ol>
</nav>


    



  <h1 class="govuk-heading-l">Users</h1>

  <div class="govuk-!-text-align-right">
    <a href="/admin/user-management/users/new" role="button" draggable="false" class="govuk-button govuk-button--secondary" data-module="govuk-button">
  Create user
</a>
  </div>




    <table class="govuk-table">
  <thead class="govuk-table__head">
    <tr class="govuk-table__row">
      <th scope="col" class="govuk-table__header govuk-!-width-one-third">Name</th>
      <th scope="col" class="govuk-table__header govuk-!-width-one-third">Email</th>
      <th scope="col" class="govuk-table__header">Last login</th>
    </tr>
  </thead>
  <tbody class="govuk-table__body">
    <tr class="govuk-table__row">
      <th scope="row" class="govuk-table__header">        <a class="govuk-link" href="/admin/user-management/user-1">Alice Able</a>
</th>
      <td class="govuk-table__cell">alice@example.com</td>
      <td class="govuk-table__cell"></td>
    </tr>
    <tr class="govuk-table__row">
      <th scope="row" class="govuk-table__header">        <a class="govuk-link" href="/admin/user-management/user-2">Zara Zee</a>
</th>
      <td class="govuk-table__cell">zara@example.com</td>
      <td class="govuk-table__cell"></td>
    </tr>
  </tbody>
</table>

        "
`;
